pkg/i2gw/emitters/agentgateway/testing/testdata/output/backend_protocol.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: grpc-backend-backend-http-version
  namespace: default
spec:
  backend:
    http:
      version: HTTP2
  targetRefs:
    - group: ""
      kind: Service
      name: grpc-backend
status:
  ancestors: null
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
    - hostname: backend-protocol.example.org
      name: backend-protocol-example-org-http
      port: 80
      protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-backend-protocol-backend-protocol-example-org
  namespace: default
spec:
  hostnames:
    - backend-protocol.example.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: grpc-backend
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
status:
  parents: []
