pkg/i2gw/emitters/agentgateway/testing/testdata/output/buffer_body_size.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: ingress-buffer-body-size
  namespace: default
spec:
  frontend:
    http:
      maxBufferSize: 2097152
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: ingress-buffer-body-size-buffer-body-size-example-org
status:
  ancestors: null
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: nginx
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
    - hostname: buffer-body-size.example.org
      name: buffer-body-size-example-org-http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: ingress-buffer-body-size-buffer-body-size-example-org
  namespace: default
spec:
  hostnames:
    - buffer-body-size.example.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: myservice
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
      name: rule-0
status:
  parents: []
