pkg/i2gw/emitters/agentgateway/testing/testdata/output/cors.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: ingress-myservicea1
  namespace: default
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: ingress-myservicea1-myservicea-foo-org
  traffic:
    cors:
      allowCredentials: false
      allowHeaders:
        - X-Requested-With
        - Content-Type
      allowMethods:
        - GET
        - POST
        - OPTIONS
      allowOrigins:
        - https://example.com
        - https://another.com
      exposeHeaders:
        - X-Expose-One
        - X-Expose-Two
      maxAge: 600
status:
  ancestors: null
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: ingress-myserviceb
  namespace: default
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: ingress-myserviceb-myserviceb-foo-org
  traffic:
    cors:
      allowCredentials: true
      allowHeaders:
        - DNT
        - Keep-Alive
        - User-Agent
        - X-Requested-With
        - If-Modified-Since
        - Cache-Control
        - Content-Type
        - Range
        - Authorization
      allowMethods:
        - GET
        - PUT
        - POST
        - DELETE
        - PATCH
        - OPTIONS
      allowOrigins:
        - https://example.com
        - https://another.com
      exposeHeaders:
        - '*'
        - X-CustomResponseHeader
      maxAge: 1728000
status:
  ancestors: null
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
    - hostname: myservicea.foo.org
      name: myservicea-foo-org-http
      port: 80
      protocol: HTTP
    - hostname: myserviceb.foo.org
      name: myserviceb-foo-org-http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-myservicea1-myservicea-foo-org
  namespace: default
spec:
  hostnames:
    - myservicea.foo.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: myservicea
          port: 80
      filters:
        - cors:
            allowCredentials: false
            allowHeaders:
              - X-Requested-With
              - Content-Type
            allowMethods:
              - GET
              - POST
              - OPTIONS
            allowOrigins:
              - https://example.com
              - https://another.com
            exposeHeaders:
              - X-Expose-One
              - X-Expose-Two
            maxAge: 600
          type: CORS
        - responseHeaderModifier:
            remove:
              - Access-Control-Allow-Origin
              - Access-Control-Allow-Methods
              - Access-Control-Allow-Headers
              - Access-Control-Expose-Headers
              - Access-Control-Max-Age
              - Access-Control-Allow-Credentials
          type: ResponseHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /
      name: rule-0
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-myserviceb-myserviceb-foo-org
  namespace: default
spec:
  hostnames:
    - myserviceb.foo.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: myserviceb
          port: 80
      filters:
        - cors:
            allowCredentials: true
            allowHeaders:
              - DNT
              - Keep-Alive
              - User-Agent
              - X-Requested-With
              - If-Modified-Since
              - Cache-Control
              - Content-Type
              - Range
              - Authorization
            allowMethods:
              - GET
              - PUT
              - POST
              - DELETE
              - PATCH
              - OPTIONS
            allowOrigins:
              - https://example.com
              - https://another.com
            exposeHeaders:
              - '*'
              - X-CustomResponseHeader
            maxAge: 1728000
          type: CORS
        - responseHeaderModifier:
            remove:
              - Access-Control-Allow-Origin
              - Access-Control-Allow-Methods
              - Access-Control-Allow-Headers
              - Access-Control-Expose-Headers
              - Access-Control-Max-Age
              - Access-Control-Allow-Credentials
          type: ResponseHeaderModifier
      matches:
        - path:
            type: PathPrefix
            value: /
      name: rule-0
status:
  parents: []
