pkg/i2gw/emitters/agentgateway/testing/testdata/output/frontend_http.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: nginx-frontend-http
  namespace: default
spec:
  frontend:
    http:
      http1IdleTimeout: 45s
      http1MaxHeaders: 120
      http2ConnectionWindowSize: 131070
      http2FrameSize: 16384
      http2KeepaliveInterval: 30s
      http2KeepaliveTimeout: 10s
      http2WindowSize: 65535
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: nginx
status:
  ancestors: null
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
  - hostname: frontend-http.example.org
    name: frontend-http-example-org-http
    port: 80
    protocol: HTTP
status: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: ingress-frontend-http-frontend-http-example-org
  namespace: default
spec:
  hostnames:
  - frontend-http.example.org
  parentRefs:
  - name: nginx
  rules:
  - backendRefs:
    - name: echo-backend
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
status:
  parents: []
