pkg/i2gw/emitters/agentgateway/testing/testdata/output/load_balance.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: nginx
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
    - hostname: lb.localdev.me
      name: lb-localdev-me-http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-dev
  name: lb-localhost-lb-localdev-me
  namespace: default
spec:
  hostnames:
    - lb.localdev.me
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - name: echo-backend
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
status:
  parents: []
