pkg/i2gw/emitters/agentgateway/testing/testdata/output/service_upstream.yaml
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  labels:
    ingress2gateway.kubernetes.io/source-ingress: ingress-myservicea1
  name: myservicea-service-upstream
  namespace: default
spec:
  static:
    host: myservicea.default.svc.cluster.local
    port: 80
status: {}
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  labels:
    ingress2gateway.kubernetes.io/source-ingress: ingress-myserviceb
  name: myserviceb-service-upstream
  namespace: default
spec:
  static:
    host: myserviceb.default.svc.cluster.local
    port: 80
status: {}
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: myserviceb-service-upstream-backend-http-version
  namespace: default
spec:
  backend:
    http:
      version: HTTP2
  targetRefs:
    - group: agentgateway.dev
      kind: AgentgatewayBackend
      name: myserviceb-service-upstream
status:
  ancestors: null
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: nginx
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
    - hostname: myservicea.foo.org
      name: myservicea-foo-org-http
      port: 80
      protocol: HTTP
    - hostname: myserviceb.foo.org
      name: myserviceb-foo-org-http
      port: 80
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: ingress-myservicea1-myservicea-foo-org
  namespace: default
spec:
  hostnames:
    - myservicea.foo.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: myservicea-service-upstream
      matches:
        - path:
            type: PathPrefix
            value: /
      name: rule-0
    - backendRefs:
        - name: myservicea
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /2
      name: rule-1
status:
  parents: []
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-v0.5.0
  name: ingress-myserviceb-myserviceb-foo-org
  namespace: default
spec:
  hostnames:
    - myserviceb.foo.org
  parentRefs:
    - name: nginx
  rules:
    - backendRefs:
        - group: agentgateway.dev
          kind: AgentgatewayBackend
          name: myserviceb-service-upstream
      matches:
        - path:
            type: PathPrefix
            value: /
      name: rule-0
status:
  parents: []
